css/main.css
body{
      font-family: 'Proxima Nova', Georgia, sans-serif;
    }

.navbar {
      font-family: 'Proxima Nova', Georgia, sans-serif;
      margin-bottom: 0;
      height: 100%;
      border: 0;
      border-bottom: 0.7px lightgray solid;
}

.sidenav {
      padding-top: 20px;
      background-color: #f1f1f1;
      height: 100%;
   }
    
    /* Set black background color, white text and some padding */
    footer {
      background-color: #555;
      color: white;
      padding: 15px;
    }

.main{

  padding-left: 10%;
  padding-right: 10%;
}

.brand-logo{
      height: 32px;
      width: 120px;
    }
   

.dropdown{
  padding: 0;
}

.dropdown a:hover{

  background-color: white;
}


.dropdown-toggle{
  color:black;
  font-size: 11px;
  margin-left:-10px;
  margin-top: 25px;
  background-color: white;
  z-index: 1;
  padding:0 !important;
}
.dropdown-toggle:hover{
  background-color: white !important;
}



.dropdown-content {
  #margin-top: -10px;
  margin-left: -10px;
  color:black;
  display: none;
  position: absolute;
  background-color: white;
  min-width: 150px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
  border-radius: 4px;
  font-size: 15px;
  list-style:none;
  border:1px lightgray solid;
  padding:0;
}

.dropdown-content li{

  
  border: 0.5px lightgray solid;
  width: 100%;
  display: block;
  margin:0 !important;
  padding: 5px 0px;
}


.dropdown:hover .dropdown-content {
  display: block;

}

.dropdown-content li a {

  color: black;
  padding: 3px 2px;
  text-decoration: none;
  display: block;
  text-align: left;
}


.dropdown-content a:hover {

  background-color: #f4f5f7;
  color:#2ccebf;

}





.green-text {

  color:#2ccebf;

}


.rightpart li a:hover{

  color:#2ccebf !important;
  background-color: white;
}

.bottom li a{

  font-family: 'proxima_nova_altbold', Georgia, sans-serif;
  color:#525254;
}

.bottom li a:hover{

  background-color: white;
  color:#2ccebf !important;
}


.bottom li{

  font-size: 16px;
  

}


.dropdown-contentv2 {
  color:black;
  display: none;
  position: absolute;
  background-color: white;
  min-width: 150px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 99;
  border-radius: 8px;
  font-size: 12px;
  list-style:none;
  border:0.2px lightgray solid;
  padding:0;
  margin-top: -12px;

}

.dropdown-contentv2 li{

  
  border: 0;
  width: 100%;
  display: block;
  margin:0 !important;
  padding: 5px 0px;

}


.dropdown:hover .dropdown-contentv2 {
  display: block;

}

.dropdown-contentv2 li a {

  font-family: 'Proxima Nova', Georgia, sans-serif; 
  color: black;
  padding: 3px 2px;
  text-decoration: none;
  display: block;
  text-align: left;
  margin-left: 10px;
  font-size: 15px;
}


.dropdown-content a:hover {

  background-color: #f4f5f7;
  color:#2ccebf;

}

